--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,12 @@ dependencies {
 
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+    //banner
+    implementation 'com.youth.banner:banner:2.1.0'
+
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
 }
