--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,16 @@
 buildscript {
 
     ext.kotlin_version = "1.3.72"
+
+    ext{
+        okhttpLoggingVersion = '4.7.2'
+        retrofitVersion = '2.9.0'
+        gsonVersion = '2.8.2'
+        pagingVersion = '3.0.0-alpha02'
+        coroutinesVersion = "1.4.2"
+    }
+
+
     repositories {
         google()
         jcenter()
