--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         gsonVersion = '2.8.2'
         pagingVersion = '3.0.0-alpha02'
         coroutinesVersion = "1.4.2"
+        navigationVersion = '2.3.3'
     }
 
 
@@ -23,6 +24,7 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
     }
 }
 
