--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,9 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            //启用混淆
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
