新增paging库用来获取不同来源的音乐列表并实现其分页功能，并且配合hilt实现了依赖项注入，新增了启动页，微调了UI，将gradle版本升至7.0.1，Java版本升至11

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,10 +22,11 @@
         android:usesCleartextTraffic="true"
         android:requestLegacyExternalStorage="true"
         android:exported="false"
-        android:theme="@style/Theme.Sunflower"
+        android:theme="@style/SplashTheme"
         tools:replace="android:label">
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
