--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
 
-    ext.kotlin_version = "1.3.72"
+    ext.kotlin_version = '1.4.32'
 
     ext{
         okhttpLoggingVersion = '4.7.2'
         retrofitVersion = '2.9.0'
         gsonVersion = '2.8.2'
-        pagingVersion = '3.0.0-alpha02'
+        pagingVersion = '3.0.1'
         coroutinesVersion = "1.4.2"
         navigationVersion = '2.3.3'
     }
@@ -15,10 +15,10 @@ buildscript {
 
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.2"
+        classpath 'com.android.tools.build:gradle:7.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -31,7 +31,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven { url 'https://jitpack.io' }
     }
 }
