--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <!--  后台刷新服务和通知栏要用  -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <!--    android:requestLegacyExternalStorage="true" 取消android10沙盒模式用于读取音频数据-->
     <!--    android:exported="false" 禁止其他应用访问应用的内容提供程序-->
     <application
