--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 30
     buildToolsVersion "30.0.2"
 
     buildFeatures {
@@ -17,7 +17,7 @@ android {
     defaultConfig {
         applicationId "com.example.echo_kt"
         minSdkVersion 23
-        targetSdkVersion 31
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
@@ -73,11 +73,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     //hilt
-    implementation "com.google.dagger:hilt-android:2.31.2-alpha"
-    kapt "com.google.dagger:hilt-android-compiler:2.31.2-alpha"
+    implementation 'com.google.dagger:hilt-android:2.40.1'
+    kapt 'com.google.dagger:hilt-android-compiler:2.40.1'
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
     kapt 'androidx.hilt:hilt-compiler:1.0.0-beta01'
-    implementation "com.google.dagger:hilt-android:2.31.2-alpha"
+    implementation 'com.google.dagger:hilt-android:2.40.1'
 
     //rxjava
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
@@ -116,5 +116,5 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.coroutinesVersion"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.coroutinesVersion"
 
-    implementation 'androidx.core:core-splashscreen:1.0.0-alpha01'
+//    implementation 'androidx.core:core-splashscreen:1.0.0-alpha01'
 }
