--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
 
-    ext.kotlin_version = '1.4.32'
+    ext.kotlin_version = '1.6.0'
 
     ext{
         okhttpLoggingVersion = '4.7.2'
         retrofitVersion = '2.9.0'
         gsonVersion = '2.8.2'
         pagingVersion = '3.0.1'
-        coroutinesVersion = "1.4.2"
+        coroutinesVersion = '1.5.2-native-mt'
         navigationVersion = '2.3.3'
     }
 
@@ -18,7 +18,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.1'
+        classpath 'com.android.tools.build:gradle:7.0.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
