--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,13 +15,13 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.echo_kt"
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        flavorDimensions "default"
     }
 
     buildTypes {
@@ -29,6 +29,27 @@ android {
             //不启用混淆
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled false
+            debuggable true
+
+            applicationIdSuffix ".debug"
+            resValue("string", "ENVIRONMENT", "DEBUG")
+        }
+    }
+
+    productFlavors {
+        echo_debug {
+            applicationId "com.km.echo_debug"
+            resValue "string","app_name","echo_debug"
+            manifestPlaceholders = [app_icon : "@mipmap/echo_grey"]
+        }
+        echo{
+            applicationId "com.km.echo"
+            resValue "string","app_name","echo"
+            manifestPlaceholders = [app_icon : "@mipmap/echo"]
         }
     }
     compileOptions {
@@ -38,7 +59,6 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-
 }
 //groovy
 configurations.all {
@@ -116,6 +136,4 @@ dependencies {
     implementation "androidx.paging:paging-runtime-ktx:$rootProject.pagingVersion"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.coroutinesVersion"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.coroutinesVersion"
-
-//    implementation 'androidx.core:core-splashscreen:1.0.0-alpha01'
 }
