--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,9 @@
     <application
         android:name=".BaseApplication"
         android:exported="false"
-        android:icon="@mipmap/echo"
-        android:label="echo"
+        android:icon="${app_icon}"
+        android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
-        android:roundIcon="@mipmap/echo"
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.Echo"
         android:usesCleartextTraffic="true"
