--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,13 +21,15 @@
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
         android:supportsRtl="true"
+        android:fontFamily="@font/comic"
         android:theme="@style/Base.Theme.Echo"
         android:usesCleartextTraffic="true"
         tools:replace="android:label">
 
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:fontFamily="@font/comic">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
